5. Bug: O texto da tabela não está centralizado. Centralizei o texto da tabela incluindo text-align: center em table, além de margin: auto para centralizar a tabela na tela e position: relative com bottom: 60px para subi-la um pouco mais. No td coloquei padding-right: 30px, centralizei o botão voltar e o tirei da base da tela

--- a/semana1/bugfixes/index.css
+++ b/semana1/bugfixes/index.css
@@ -77,7 +77,13 @@ div img {
 #container-de-descricao>ol {
     padding: 15px 0;
     list-style-position: inside;
+    width: 250px;
+    text-align: left;
+    margin: auto;
+}
 
+#container-de-descricao > ol > li {
+    padding-left: 10px;
 }
 
 #container-de-descricao > p {
@@ -107,10 +113,19 @@ div img {
 div:nth-child(2),
 div:last-child {
     text-align: center;
+   
 }
 
 table {
     width: 60%;
+    text-align: center;
+    margin: auto;
+    position: relative;
+    bottom: 60px;
+}
+
+td {
+    padding-right: 30px;
 }
 
 td button {
@@ -135,6 +150,14 @@ td button {
     border-radius: 5px;
     font-size: 10px;
     color: black;
+    display: block;
+    margin: auto;
+    position: relative;
+    bottom: 5px;
+}
+
+a {
+    text-decoration: none;
 }
 
 #back-button:hover {
